syntax = "proto3";

package order.v1;

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (Order);
  rpc GetOrder(GetOrderRequest) returns (Order);
  rpc CancelOrder(CancelOrderRequest) returns (CancelOrderResponse);
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);
}

message Order {
  string id = 1;
  string customer_id = 2;
  string status = 3;
  double total_amount = 4;
  repeated OrderItem items = 5;
  string created_at = 6;
}

message OrderItem {
  string product_id = 1;
  int32 quantity = 2;
  double price = 3;
  double total = 4;
}

message CreateOrderRequest {
  string customer_id = 1;
  repeated OrderItem items = 2;
}

message GetOrderRequest {
  string id = 1;
}

message CancelOrderRequest {
  string id = 1;
}

message CancelOrderResponse {}

message ListOrdersRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message ListOrdersResponse {
  repeated Order orders = 1;
  int32 total = 2;
}